--- a/juego_de_adivinanza.ipynb
+++ b/juego_de_adivinanza.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP/5tNtuskByRWi8dRmczMJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,32 +22,59 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ahcamachod/2006-python-comenzando-con-el-lenguaje/blob/aula-3/juego_de_adivinanza.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Leorozco1960/Curso_de_Python/blob/main/juego_de_adivinanza.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "id": "iPAAjJ-q2fJK"
+        "id": "iPAAjJ-q2fJK",
+        "outputId": "148e36b2-1c9c-4363-f828-1cadf5820bb0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "=======================================\n",
+            "  A C E R T A N D O  U N  N U M E R O \n",
+            "=======================================\n",
+            "Digita un número: 109\n",
+            "El número que digitaste:  109\n",
+            "! No acertaste !, el numero es mayor,\n"
+          ]
+        }
+      ],
       "source": [
-        "print(\"**********************\")\n",
-        "print(\"  Adivina el numero\")\n",
-        "print(\"**********************\")\n",
+        "print(\"=======================================\")\n",
+        "print(\"  A C E R T A N D O  U N  N U M E R O \")\n",
+        "print(\"=======================================\")\n",
         "\n",
         "numero_secreto = 55\n",
         "entrada_str = input(\"Digita un número: \")\n",
         "entrada = int(entrada_str)\n",
+        "entrada = int(entrada_str)\n",
+        "acierto = entrada == numero_secreto\n",
+        "mayor = entrada > numero_secreto\n",
+        "menor = entrada < numero_secreto\n",
         "print(\"El número que digitaste: \",entrada)\n",
+        "#  INTRODUCIR UN NUMERO\n",
+        "if(acierto):\n",
+        "  print(\"!correcto!, Acertaste el numero \")\n",
+        "else :\n",
         "\n",
-        "if (numero_secreto == entrada):\n",
-        "  print(\"¡Acertaste!\")\n",
-        "else:\n",
-        "  print(\"El número no corresponde.\")\n",
+        "    # SI USUARIO DIGITÓ UN NUMERO_SECRETO MAYOR , ENTONCES ESPECIFICAR\n",
+        "  if (mayor):\n",
+        "    print(\"! No acertaste !, el numero es mayor,\")\n",
+        "      # usando elif para dar otra opcion\n",
+        "  elif(menor):\n",
+        "    print(\"! No acertaste !, el numero es menor.\")\n",
         "\n",
-        "print(\"El juego ha concluído!\")"
+        "    print(\"Intentalo Nuevamente o cierra el programa\")"
       ]
     }
   ]
